K8s-manifests/juice-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.juice.nip.io
      secretName: dummy-tls
  rules:
    - host: app.juice.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice-shop-service
                port:
                  number: 80
